# qtgl

./: .clang-format  CMakeLists.txt
data/Cube/: material.lib
data/xyz_axis/: xyz_axis.mtl
qtgl/: CMakeLists.txt  affineutils.hpp  camera.hpp  define.hpp  event.cpp  event.hpp  gltfmodel.cpp  gltfmodel.hpp  material.hpp  mathutils.hpp  mesh.cpp  mesh.hpp  model.hpp  objmodel.cpp  objmodel.hpp  primitive.hpp  projection.hpp  qtglmain.cpp  render.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  shadow.cpp  shadow.hpp  stringutils.hpp  texture.cpp  texture.hpp
qtgl/test/: CMakeLists.txt  cubetexture_test.cpp  gltf_test.cpp  scene_test.cpp
