set(CMAKE_INCLUDE_CURRENT_DIR true)
add_executable(scene_test ../event.cpp ../texture.cpp ../gltfmodel.cpp ../objmodel.cpp ../scene.cpp ../shadow.cpp ../shader.cpp ../mesh.cpp ../primitive.cpp scene_test.cpp)
add_executable(gltf_test ../gltfmodel.cpp gltf_test.cpp)
add_executable(cubetexture_test ../texture.cpp cubetexture_test.cpp)
target_link_libraries(scene_test spdlog::spdlog_header_only Qt5::Core Qt5::Widgets Eigen3::Eigen ${OpenCV_LIBS} nlohmann_json::nlohmann_json)
target_link_libraries(gltf_test spdlog::spdlog_header_only Qt5::Core Qt5::Widgets Eigen3::Eigen ${OpenCV_LIBS} nlohmann_json::nlohmann_json)
target_link_libraries(cubetexture_test spdlog::spdlog_header_only Qt5::Core Qt5::Widgets Eigen3::Eigen ${OpenCV_LIBS} nlohmann_json::nlohmann_json)